# QML

./: .gitignore  README.md  compare_params.py  crop_yield_nn.ipynb  crop_yield_nn_assets.pkl  crop_yield_qnn_model.pth  exploration.ipynb  main.py  plant_classifier.ipynb  pyproject.toml  qnn_crop_yield.ipynb  qnn_crop_yield_small.ipynb  quantum_features_cache.pkl  result.txt  train_nn_crop_yield.py  train_plant_classifier.py  train_qnn_crop_yield.py  train_qnn_large_head_crop_yield.py  train_quantum_plant.py
failed/: qsvm_trial.py  train_quantum_plant.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/disease/: page.tsx
frontend/app/yield/: page.tsx
frontend/components/disease/: DiseaseModelToggle.tsx  DiseaseResultCard.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/components/yield/: ModelSelector.tsx  YieldResultCard.tsx
frontend/lib/: api.ts
results/crop_yield/: crop_yield_nn_assets.pkl  crop_yield_qnn_model.pth  quantum_features_cache.pt
